--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="/images/logo.png">
 
-    <title>React App</title>
+    <title>iRental</title>
   </head>
   <body>
     <div id="root"></div>
